--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGOURL=mongodb://admin:adminpass@localhost:27017
-POSTGRES_URL=postgres://admin:adminpass@localhost:5432/gs_db?sslmode=disable
+MONGOURL=mongodb://admin:adminpass@172.17.0.1:27017
+POSTGRES_URL=postgres://admin:adminpass@172.17.0.1:5432/gs_db?sslmode=disable
 HTML_PATH=./html_data
