updates: 1. enum to TaskStatus 2. retry mechanism after task completed 3. get individual task details

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGOURL=mongodb://admin:adminpass@172.17.0.1:27017
 POSTGRES_URL=postgres://admin:adminpass@172.17.0.1:5432/gs_db?sslmode=disable
-HTML_PATH=./html_data
+HTML_PATH=/home/ec2-user/Distributed_Job_Crawler/html_data
