add option for non-docker env; fix patch request issue; remove post request

--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
-MONGOURL=mongodb://admin:adminpass@172.17.0.1:27017
-POSTGRES_URL=postgres://admin:adminpass@172.17.0.1:5432/gs_db?sslmode=disable
-HTML_PATH=/home/ec2-user/Distributed_Job_Crawler/html_data
+MONGOURL=mongodb://admin:adminpass@localhost:27017
+POSTGRES_URL=postgres://admin:adminpass@localhost:5432/gs_db?sslmode=disable
+
+
+# WORKER
+WEB_DRIVER_PATH="/opt/homebrew/bin/chromedriver'" # local mac
+HTML_PATH="/Users/harrisonli/Desktop/Go_micro_job_crawler/html_data" # local mac
+#HTML_PATH=/home/ec2-user/Distributed_Job_Crawler/html_data # ec2
+
+# GS
+# host/docker
+MODE=host
+# only use when in host mode
+PYTHONFILEPATH='/Users/harrisonli/Desktop/Go_micro_job_crawler/workers/src'
