updates: basic funcs works in local env

--- a/.env
+++ b/.env
@@ -3,9 +3,10 @@ POSTGRES_URL=postgres://admin:adminpass@localhost:5432/gs_db?sslmode=disable
 
 
 # WORKER
-WEB_DRIVER_PATH="/opt/homebrew/bin/chromedriver'" # local mac
+WEB_DRIVER_PATH="/Users/harrisonli/.wdm/drivers/chromedriver/mac64/126.0.6478.126/chromedriver-mac-arm64/chromedriver" # local mac
 HTML_PATH="/Users/harrisonli/Desktop/Go_micro_job_crawler/html_data" # local mac
 #HTML_PATH=/home/ec2-user/Distributed_Job_Crawler/html_data # ec2
+GS_URL="http://localhost:8080"
 
 # GS
 # host/docker
